# shard

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
examples/: CMakeLists.txt
examples/algorithm/: CMakeLists.txt  enumerate.cpp  functional.cpp  pairs.cpp  variant_switch.cpp
examples/alloc/: CMakeLists.txt  allocators.cpp  array.cpp  stack.cpp
examples/any/: CMakeLists.txt  any.cpp
examples/common/: CMakeLists.txt  error.cpp  hash_value.cpp  runtime_id.cpp  timer.cpp
examples/concurrency/: CMakeLists.txt  channel.cpp  mpsc_queue.cpp  semaphore.cpp  tbuf_value.cpp  this_thread.cpp  thread_pool.cpp  thread_safe.cpp
examples/containers/: CMakeLists.txt  array.cpp  dynamic_bitset.cpp  hash_map.cpp  sparse_set.cpp  stack.cpp  static_vector.cpp
examples/crypto/: CMakeLists.txt  base64.cpp  md5.cpp  sha.cpp  sha1.cpp  sha256.cpp
examples/enums/: CMakeLists.txt  enum_set.cpp  flags.cpp
examples/expected/: CMakeLists.txt  expected.cpp
examples/io/: CMakeLists.txt  file.cpp
examples/log/: CMakeLists.txt  log.cpp
examples/math/: CMakeLists.txt  degrees.cpp  percentage.cpp  utils.cpp
examples/memory/: CMakeLists.txt  allocators.cpp  buffer_ptr.cpp  object.cpp  unowned_ptr.cpp
examples/meta/: CMakeLists.txt  type_traits.cpp
examples/net/: CMakeLists.txt  curl.cpp  http.cpp  spotify.cpp  world_time.cpp
examples/optional/: CMakeLists.txt  optional.cpp
examples/property/: CMakeLists.txt  property.cpp
examples/random/: CMakeLists.txt  random.cpp
examples/signal/: CMakeLists.txt  signal.cpp
examples/sqlite/: CMakeLists.txt  sqlite.cpp
examples/sqlite/databases/: test.db
examples/string/: CMakeLists.txt  fmt.cpp  join.cpp  replace.cpp  search.cpp  split.cpp  to_number.cpp  to_string.cpp
examples/system/: CMakeLists.txt  env.cpp
examples/utility/: CMakeLists.txt  error.cpp  function_ref.cpp  hash_value.cpp  timer.cpp
examples/uuid/: CMakeLists.txt  uuid.cpp
modules/: CMakeLists.txt
modules/algorithm/: CMakeLists.txt
modules/algorithm/include/shard/: algorithm.hpp
modules/algorithm/include/shard/algorithm/: container_utils.hpp  enumerate.hpp  functional.hpp  pairs.hpp  stl_wrappers.hpp  variant_switch.hpp
modules/alloc/: CMakeLists.txt
modules/alloc/include/shard/alloc/: allocator.hpp
modules/any/: CMakeLists.txt
modules/any/include/shard/: any.hpp
modules/bit/: CMakeLists.txt
modules/bit/include/shard/: bit.hpp  byteswap.hpp  endian.hpp
modules/bit/include/shard/bit/: byteswap.hpp  countr_zero.hpp  operations.hpp  popcount.hpp  traits.hpp
modules/common/: CMakeLists.txt
modules/common/include/shard/: error.hpp  hash_value.hpp  runtime_id.hpp  source_location.hpp  version.hpp
modules/concurrency/: CMakeLists.txt
modules/concurrency/include/shard/: concurrency.hpp
modules/concurrency/include/shard/concurrency/: channel.hpp  lock_traits.hpp  mpsc_queue.hpp  null_mutex.hpp  semaphore.hpp  tbuf_value.hpp  this_thread.hpp  thread_pool.hpp  thread_safe.hpp
modules/concurrency/src/darwin/: semaphore.cpp  this_thread.cpp
modules/concurrency/src/linux/: semaphore.cpp  this_thread.cpp
modules/concurrency/src/win/: semaphore.cpp  this_thread.cpp
modules/containers/: CMakeLists.txt
modules/containers/include/shard/: containers.hpp  dynamic_bitset.hpp  sparse_set.hpp
modules/containers/include/shard/containers/: array.hpp  hash_map.hpp  stack.hpp  static_vector.hpp
modules/core/: CMakeLists.txt
modules/core/include/shard/core/: byte.hpp  defer.hpp  non_copyable.hpp  preprocessor.hpp
modules/crypto/: CMakeLists.txt
modules/crypto/include/shard/crypto/: base64.hpp  hash.hpp  md5.hpp  sha.hpp  sha1.hpp  sha256.hpp
modules/crypto/src/: base64.cpp  hash.cpp  sha.cpp
modules/enums/: CMakeLists.txt
modules/enums/include/shard/: enums.hpp
modules/enums/include/shard/enums/: enum_set.hpp  flags.hpp  operators.hpp  traits.hpp  type.hpp
modules/expected/: CMakeLists.txt
modules/expected/include/shard/: expected.hpp
modules/expected/include/shard/expected/: bad_expected_access.hpp  expected.hpp  traits.hpp  (+1 more)
modules/io/: CMakeLists.txt
modules/io/include/shard/: io.hpp
modules/log/: CMakeLists.txt
modules/log/include/shard/: log.hpp
modules/log/src/: logger.cpp  message.cpp  sink.cpp
modules/math/: CMakeLists.txt
modules/math/include/shard/: math.hpp
modules/memory/: CMakeLists.txt
modules/memory/include/shard/: memory.hpp
modules/meta/: CMakeLists.txt
modules/meta/include/shard/: meta.hpp
modules/net/: CMakeLists.txt
modules/optional/: CMakeLists.txt
modules/optional/include/shard/: optional.hpp
modules/property/: CMakeLists.txt
modules/property/include/shard/: property.hpp
modules/random/: CMakeLists.txt
modules/random/include/shard/: random.hpp
modules/signal/: CMakeLists.txt
modules/signal/include/shard/: signal.hpp
modules/sqlite/: CMakeLists.txt
modules/sqlite/include/shard/: sqlite.hpp
modules/stlxt/: CMakeLists.txt
modules/string/: CMakeLists.txt
modules/string/include/shard/: string.hpp
modules/system/: CMakeLists.txt
modules/system/src/: env.cpp  platform.cpp
modules/system/src/unix/: env.cpp
modules/system/src/win/: env.cpp
modules/utility/: CMakeLists.txt
modules/uuid/: CMakeLists.txt
modules/uuid/include/shard/: uuid.hpp
modules/uuid/src/: uuid.cpp
modules/uuid/src/darwin/: generator.cpp
modules/uuid/src/linux/: generator.cpp
modules/uuid/src/win/: generator.cpp
tests/: CMakeLists.txt  algorithm_test.cpp  any_test.cpp  array_test.cpp  bit_test.cpp  common_test.cpp  concurrency_test.cpp  core_test.cpp  enums_test.cpp  expected_test.cpp  hash_map_test.cpp  io_test.cpp  main.cpp  math_test.cpp  memory_test.cpp  meta_test.cpp  optional_test.cpp  property_test.cpp  signal_test.cpp  sparse_set_test.cpp  string_test.cpp  utility_test.cpp  uuid_test.cpp
tests/alloc/: allocators_test.cpp
tests/alloc/containers/: array_test.cpp
tests/containers/: dynamic_bitset_test.cpp  sparse_set_test.cpp
tests/helpers/: addresser.hpp  counter.cpp  counter.hpp  no_default.hpp  streamable.hpp  widget.hpp
(+126 files in other folders)
